fix: wrong test path and style

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,4 +34,4 @@ jobs:
       - name: test
         shell: bash -el {0}
         run: |
-          pytest -vvs tests
+          pytest -vvs conda_oci
